# booster_robotics_sdk_ros2

./: CMakeLists.txt  README.cn.md  README.en.md  pixi.toml
booster_ros2_example/python_concurrency_example/: python_concurrency_example.py
booster_ros2_example/rpc_client/src/: client.py
booster_ros2_example/rtc_client/: CMakeLists.txt  package.xml
booster_ros2_example/rtc_client/include/: prompt.h
booster_ros2_example/rtc_client/src/: client.cpp
booster_ros2_interface/: CMakeLists.txt  pixi.toml
booster_ros2_interface/msg/: ProneBodyControlStatus.msg  Subtitle.msg  UpperBodyGestureActionStatus.msg
include/booster_interface/booster_interface/: message_utils.hpp
include/robot/ai/: client.hpp
rpc_client/src/: client.cpp
src/robot/ai/: client.cpp
